--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -1,17 +1,10 @@
 on:
   schedule:
-    - cron: '*/5 * * * *'  # every 5 minutes
+    - cron: '6,9,13,19,26,32,39,42,45,52,58 * * * *'  # runs at fixed minutes
 
 jobs:
   ping:
     runs-on: ubuntu-latest
     steps:
-      - name: Random chance to ping
-        id: choice
-        run: |
-          CHANCE=$((RANDOM % 5))
-          echo "chance=$CHANCE" >> $GITHUB_OUTPUT
-
       - name: Ping endpoint
-        if: steps.choice.outputs.chance == '0'
         run: curl -sf https://codercat-server.onrender.com/ping && echo "✅ pong"
